--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -17,6 +17,9 @@
    */
   width: 100vw;
   height: 100vh;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
   /* background:  url(../../assets/images/mountain4.jpg);
  background-repeat: no-repeat;
  background-size: cover;
@@ -458,7 +461,7 @@
 }
 
 .MyIntoPar {
-  height: 100%;
+  /* height: 100%; */
   /* background-image: linear-gradient(-20deg, #ff2846 0%, #6944ff 100%); */
   background-image: linear-gradient(-20deg, #ff2846 0%, #6944ff 100%);
   /* padding: 50px;
@@ -795,7 +798,7 @@
 
 .sideClass {
   background: var(--color-app);
-  height: 100%;
+  /* height: 100%; */
   align-items: center;
   justify-content: center;
   display: flex;
@@ -870,12 +873,6 @@
   cursor: pointer;
   backface-visibility: hidden;
   transition: all 0.3s;
-}
-@media screen and (max-width: 768px) {
-  .profile-card__button {
-    min-width: 170px;
-    /* margin: 15px 25px; */
-  }
 }
 
 .profile-card__button:focus {
@@ -1018,11 +1015,15 @@
 @media screen and (max-width: 768px) {
   .HomePageWrap {
     overflow-y: scroll;
-    -webkit-overflow-scrolling: smooth;
+    scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
   }
   .profileDescDiv {
     flex-direction: column !important;
     justify-content: unset !important;
+  }
+  .profileDescPart {
+    height: auto;
   }
   .sideClass {
     display: none !important;
@@ -1052,6 +1053,9 @@
     height: 65px;
     width: 65px;
     font-size: 16px;
+  }
+  .profile-card__button {
+    margin: 5px;
   }
 }
 
@@ -1100,5 +1104,14 @@
   .introParHead .span4 .span4-badges:nth-child(3) {
     background: #071b2f;
     color: white;
+  }
+  .profile-cards {
+    height: 100px;
+    width: 100px;
+  }
+  .card-headings {
+    height: 60px;
+    width: 60px;
+    font-size: 14px;
   }
 }
