--- a/src/components/CardGlobal/CardGlobal.css
+++ b/src/components/CardGlobal/CardGlobal.css
@@ -1,102 +1,76 @@
 @import "../../styles/globalstyles.css";
 @import "../../styles/colors.css";
 
-.cardParStyle {
-  width: 20rem;
-  max-width: 20rem;
-  border-radius: 3rem;
-  overflow: hidden;
-  /* box-shadow: 0 0 20px 10px #d9d9d9; */
-  margin: 2rem;
-  /* height: 30rem; */
-}
-/* .cardInStyle{
-   height: 100%;
-   width: 100%;
-     background: linear-gradient(to left,#6973c2 , #f87295);
-
-     background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
-
-     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab); 
-      background-size: 400% 400%;
-
-     animation: gradient 15s ease infinite;
-     border-radius: 3rem;
-} */
-
-.cardbody {
-  height: 26rem;
-  background: #1b1a2c;
-  overflow: auto;
-}
-.cardtext {
-  padding: 3rem;
-  margin: 0;
-  font-size: 1.2rem;
-}
-
-.cardup {
-  padding: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-}
-.cardupbg {
-  background: #59db9c;
-  /* background: linear-gradient(to right, #5cbfbb, #74d690); */
-}
-.cardupimg {
-  width: 60px;
-  height: 60px;
-  border-radius: 100%;
-  margin: 0 2rem;
-  transition: transform 0.2s ease-out;
-  object-fit: cover;
-}
-.cardupimgbdr {
-  border: 5px solid white;
-}
-.card:hover .cardupimg {
-  transform: scale(1.15);
-}
-.carduppname {
+.skillsCard {
+  background-color: #131015;
+  height: auto;
+  width: 230px;
+  border-radius: 12px;
+  margin: 8px;
+  padding: 25px 20px;
   color: white;
 }
 
-.unorderedlistclass {
-  list-style-type: none !important;
-  padding: 0px !important;
-  margin: 0px !important;
-}
-.listClass {
+.skillsetsarr {
   width: 100%;
-  height: auto;
-  margin: 20px 0px;
-  display: flex;
 }
-.listimg {
+.skill_set {
+  display: flex;
+  align-items: center;
+  background-color: #1f1e25;
+  padding: 10px;
+  border-radius: 12px;
+  margin: 10px 0;
+  /* width: 100%; */
+}
+.skill_icon {
+  height: 40px;
   width: 40px;
-  border-bottom-left-radius: 25px;
-  height: auto;
+}
+.skill_icon img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+  border-radius: 12px;
+}
+.skill_details {
+  width: 100%;
+  margin-left: 10px;
+}
+.skill_details_Child {
+  margin: 10px 0;
+}
+.skill_details_section_1 {
+  width: 100%;
   display: flex;
-}
-.listtxt {
-  width: calc(100% - 40px);
-  height: auto;
-  text-align: center;
-  padding: 15px;
-  border-top-right-radius: 25px;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.listimg {
-  background: var(--dualbox_c1);
-  border: 1px solid var(--dualbox_c1);
+.progress-container {
+  box-shadow: 0 4px 5px rgb(0, 0, 0, 0.1);
 }
 
-.listtxt {
-  color: var(--dualbox_c1);
-  background: var(--dualbox_c3);
-  border: 1px solid var(--dualbox_c1);
+.progress-container,
+.progress {
+  background-color: #eee;
+  border-radius: 5px;
+  height: 7px;
+  width: 100%;
 }
 
-/* new card style*/
+.progress {
+  transition: width 0.4s linear;
+}
+/* .pbc1 {
+  background-color: #a470f8;
+}
+.pbc2 {
+  background-color: #84dcc5;
+}
+.pbc3 {
+  background-color: #f3d547;
+}
+.pbc4 {
+  background-color: #f25f5c;
+} */
