--- a/src/Pages/Skills/Skills.css
+++ b/src/Pages/Skills/Skills.css
@@ -17,5 +17,6 @@
 .CardGlobalWrapperIn {
   display: flex;
   flex-wrap: wrap;
-  align-items: start;
+  align-items: flex-start;
+  justify-content: center;
 }
