--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -513,6 +513,7 @@
   font-size: 36px;
   color: #6944ff;
   margin-bottom: 15px;
+  height: 40px;
 }
 .utxt {
   font-size: 24px;
@@ -663,8 +664,10 @@
   font-size: 20px;
   /* font-weight: bold; */
   color: var(--color-app);
-  margin-top: 20px;
-  word-spacing: 5px;
+  padding: 10px 0px 10px 0px;
+  /* word-spacing: 5px; */
+  height: 50px;
+  align-items: center;
 }
 
 .call {
@@ -851,7 +854,7 @@
 }
 
 .contactCLassChild {
-  margin: 20px 0px;
+  margin: 0px 0px 20px 0px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1114,4 +1117,9 @@
     width: 60px;
     font-size: 14px;
   }
+}
+
+.btnOrange {
+  background: linear-gradient(45deg, #d5135a, #f05924) !important;
+  box-shadow: 0px 4px 30px rgba(223, 45, 70, 0.35) !important;
 }
