--- a/src/ArnabDattaPortfolio.css
+++ b/src/ArnabDattaPortfolio.css
@@ -44,6 +44,14 @@
   box-shadow: none !important;
 }
 
+.swal2-icon {
+  width: 3em !important;
+  height: 3em !important;
+}
+.swal2-icon .swal2-icon-content {
+  font-size: 2.75em !important;
+}
+
 .center-flex-class {
   display: flex;
   justify-content: center;
