Structural change in UI

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -46,4 +46,5 @@
   --color-ab2: #3f3d56;
   --color-home-card-focus: #6c44fc;
   --color-header-card-contrast: white;
+  --color-bg-black-shade : #1f1e25
 }
