--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,5 +1,11 @@
 @import "../../styles/colors.css";
-
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+:root{
+ --left-sec-width : 23%;
+ --middle-sec-width : 42%;
+ --right-sec-width : 35%;
+}
 .w100 {
   width: 100%;
 }
@@ -110,7 +116,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40%;
+  width: var(--right-sec-width);
 }
 
 .profile-cards-parent {
@@ -461,13 +467,9 @@
 }
 
 .MyIntoPar {
-  /* height: 100%; */
-  /* background-image: linear-gradient(-20deg, #ff2846 0%, #6944ff 100%); */
+  /* background: var(--color-bg-black-shade); */
   background-image: linear-gradient(-20deg, #ff2846 0%, #6944ff 100%);
-  /* padding: 50px;
-  background: var(--c7);
-  border-radius: 12px; */
-  width: 45%;
+  width: var(--middle-sec-width);
 }
 .introPar {
   /* min-height: 460px; */
@@ -800,14 +802,15 @@
 }
 
 .sideClass {
-  background: var(--color-app);
+  background: var(--color-bg-black-shade);
+  /* background: var(--color-app); */
   /* height: 100%; */
   align-items: center;
   justify-content: center;
   display: flex;
   flex-direction: column;
   padding: 0px 20px;
-  width: 15%;
+  width: var(--left-sec-width);
 }
 
 .subCLs {
@@ -1002,12 +1005,13 @@
 }
 /* --------------- responsive -------------- */
 
+
 @media screen and (max-width: 1024px) {
   .sideClass {
-    width: 20%;
+    width: 35%;
   }
   .MyIntoPar {
-    width: 55%;
+    width: 40%;
     padding: 20px;
   }
   .rightSec {
@@ -1045,7 +1049,8 @@
     height: auto;
   }
   .sideClass {
-    display: none !important;
+    /* display: none !important; */
+    width: 100%;
   }
   .MyIntoPar {
     padding: 100px 0px 30px 0px !important;
@@ -1139,3 +1144,75 @@
   background: linear-gradient(45deg, #d5135a, #f05924) !important;
   box-shadow: 0px 4px 30px rgba(223, 45, 70, 0.35) !important;
 }
+
+.leftmid{
+   background-color: #131015;
+    height: auto;
+    width: 80%;
+    border-radius: 12px;
+    margin: 8px;
+    padding: 30px 30px;
+    color: white;
+}
+
+.leftmid h1{
+  font-family: 'Pacifico', cursive;
+  color: #f25f5c;
+}
+.leftmid h4{
+  font-family: 'Roboto';
+  color: #84dcc5;
+}
+.aboutSection{
+   /* background: #131015; */
+   padding: 10px 20px;
+   border-radius: 12px;
+   width: inherit;
+   /* margin: 10px 0; */
+  }
+  .user__story{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+.story__points{
+    display: flex;
+    align-items: center;
+    background-color: #1f1e25;
+    padding: 10px;
+    border-radius: 6px;
+    margin: 10px 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    /* justify-content: space-between; */
+    font-family: 'Courgette', cursive;
+    border-left: 3px solid;
+}
+.bullets{
+  border-radius: 50%;
+  height: 20px;
+  width: 20px;
+}
+.bp1{
+  background: #a470f8;
+}
+.bp2{
+  background: #84dcc5;
+}
+.bp3{
+  background: #f3d547;
+}
+.bp4{
+  background: #f25f5c;
+}
+.point__txt{
+  margin-left: 10px;
+  font-size: 14px;
+  width: calc(100% - 20px);
+}
+.sc1{ border-color: #a470f8}
+.sc2{ border-color: #84dcc5}
+.sc3{ border-color: #f3d547}
+.sc4{ border-color: #f25f5c}
+
